<resources>
    <string name="app_name">ReversISEC</string>
    <string name="new_game">New Game</string>
    <string name="profile">Profile</string>
    <string name="single_player">Single Player</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="your_player_name">Your player name</string>
    <string name="player_name">Player name</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="profile_picture_for_player">Profile picture for player</string>
    <string name="save_profile">Save Profile</string>
    <string name="profile_saved_successfully">Profile saved successfully</string>
    <string name="something_went_wrong_while_saving_the_profile">Something went wrong while saving the profile</string>
    <string name="empty_textview">Empty TextView</string>
    <string name="skip_turn">Skip turn</string>
    <string name="play_again">Play again</string>
    <string name="like_a_boss" translatable="false">Like a boss</string>
    <string name="pieces">pieces</string>
    <string name="yessss">YESSSS</string>
    <string name="heart_image">Heart image</string>
    <string name="awww_snap">Awww... Snap!</string>
    <string name="losing_message">You have failed to win the game. Your loss was with:</string>
    <string name="try_again">Try again</string>
    <string name="winning_message">Congratulations! You won the game with:</string>
    <string name="losing_image">Losing image</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="player_2_name">Player 2 name</string>
    <string name="close_button">Close button</string>
    <string name="local" translatable="false">Local</string>
    <string name="network">Network</string>
    <string name="app_done_by">App done by</string>
    <string name="connection">Connection</string>
    <string name="create_server">Create Server</string>
    <string name="join_server">Join Server</string>
    <string name="server_ip">Server IP</string>
    <string name="connect">Connect</string>
    <string name="black_pieces">Black</string>
    <string name="white_pieces">White</string>
    <string name="lets_go_again">let\'s go again</string>
    <string name="maybe_next_time">Maybe next time</string>
    <string name="sad_face_image">Sad face image</string>
    <string name="it_s_a_tie">It\'s a tie!</string>
    <string name="result_single_player">Against the bot</string>
    <string name="result_multiplayer_local">2 local players</string>
    <string name="result_multiplayer_network">2 network players</string>
    <string name="game_history">Game History</string>
    <string name="profile_warning_message">Before you start a game, you need to configure your profile first. Go to the profile section please.</string>
    <string name="warning_profile_title">Warning</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="confirm_delete_dialog">Delete all games history?</string>
    <string name="waiting_for_player">Waiting for player...</string>
</resources>
