<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ConfigProfile"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/profile"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profile_picture_for_player"
                android:src="@drawable/ic_person_black_24dp"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                android:layout_marginBottom="8dp"/>

            <Button
                android:id="@+id/btnTakePicture"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="onTakePicture"
                android:text="@string/take_a_picture"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/etPlayerName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/your_player_name"
                android:ems="10"
                android:inputType="textPersonName"
                android:lines="1"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:text="@string/player_name"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/btnSaveProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="onSaveProfile"
                android:text="@string/save_profile"
        android:layout_gravity="center_vertical"/>
    </LinearLayout>
</ScrollView>


