<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorTextInputDialog"
    android:padding="16dp">

    <TextView
        android:textSize="32sp"
        android:textStyle="bold"
        android:paddingRight="24dp"
        android:paddingLeft="24dp"
        android:paddingTop="64dp"
        android:background="@drawable/background_main_activity"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/app_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:paddingBottom="49dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginVertical="15dp"
            android:textSize="28sp"
            android:layout_marginBottom="4dp"
            android:textColor="#ffffff"
            android:background="@drawable/button_input"
            android:text="@string/single_player"
            android:onClick="onSinglePlayer"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginVertical="15dp"
            android:textSize="28sp"
            android:layout_marginBottom="4dp"
            android:textColor="#ffffff"
            android:background="@drawable/button_input"
            android:text="@string/multiplayer"
            android:onClick="onMultiplayer"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginVertical="15dp"
            android:textSize="28sp"
            android:layout_marginBottom="4dp"
            android:textColor="#ffffff"
            android:background="@drawable/button_input"
            android:text="@string/profile"
            android:onClick="onProfile"/>

    </LinearLayout>
</FrameLayout>