<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_margin="5dp">

    <ImageView
        android:id="@+id/ivClosePopupConnectionType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_black_24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:elevation="5dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/close_button" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/colorInputDialog"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/colorLoseFill"
                android:text="@string/connection"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                style="?android:attr/buttonBarStyle">

                <Button
                    android:id="@+id/btnCreateServer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle"
                    android:background="@drawable/button_input"
                    android:textColor="@color/colorLoseFill"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:text="@string/create_server" />


                <Button
                    android:id="@+id/btnJoinServer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle"
                    android:background="@drawable/button_input"
                    android:textColor="@color/colorLoseFill"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/join_server" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>