<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayGame"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfilePicture"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_person_black_208dp"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/tvPlayerTurn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/empty_textview"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/gameBoard"
        android:layout_marginBottom="16dp"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="40sp"
        android:layout_marginBottom="20sp">

        <TextView
            android:id="@+id/TextViewBlack"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/black_pieces"
            android:textColor="@color/colorBorderBoardCell"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/TextViewBlackPieces"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="0"
            android:textColor="@color/colorBorderBoardCell"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/TextViewWhite"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/white_pieces"
            android:textColor="@color/colorBorderBoardCell"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/TextViewWhitePieces"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="0"
            android:textColor="@color/colorBorderBoardCell"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPlayAgain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_pressed"
            android:text="@string/play_again"
            android:textColor="@color/colorLoseFill" />

        <Button
            android:id="@+id/btnSkipTurn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_pressed"
            android:text="@string/skip_turn"
            android:textColor="@color/colorLoseFill" />
    </LinearLayout>

</LinearLayout>