<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_margin="5dp">

    <ImageView
        android:id="@+id/ivClosePopupLose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_black_24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:elevation="5dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/close_button" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/colorInputDialog"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="25dp">

            <TextView
                android:id="@+id/dialogTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/colorLoseFill"
                android:text="@string/player_2_name"/>

            <EditText
                android:id="@+id/etInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_input"
                android:inputType="textPersonName"
                android:lines="1"
                android:maxEms="25"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:text="@string/player_name"
                android:textColor="@color/colorFillInputDialog"
                android:textSize="24sp"
                android:textAlignment="center"
                android:importantForAutofill="no" tools:targetApi="o" />

            <Button
                android:id="@+id/dialogOkbtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_input"
                android:textColor="@color/colorLoseFill"
                android:text="@string/ok"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>